k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: seplag-album
  labels:
    app.kubernetes.io/name: seplag-album
