k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: seplag-album
  namespace: seplag-album
  labels:
    app: seplag-album
spec:
  type: ClusterIP
  selector:
    app: seplag-album
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
