k8s/sa-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seplag-album
  namespace: seplag-album
spec:
  podSelector:
    matchLabels:
      app: seplag-album
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8080
          protocol: TCP
  egress:
    # DNS
    - to: []
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    # PostgreSQL
    - to: []
      ports:
        - port: 5432
          protocol: TCP
    # Object Storage (HTTPS)
    - to: []
      ports:
        - port: 443
          protocol: TCP
    # Integrador externo (HTTPS)
    - to: []
      ports:
        - port: 443
          protocol: TCP
